Enhance CORS configuration in SecurityConfig
Updated CORS configuration to include a fallback for the Vercel domain and improved handling of allowed origins.